# processingpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  generate_engine_with_tests.bat
config/: default-engine.ini
source/applications/games/sierra/: CMakeLists.txt
source/applications/games/sierra/private/: astar_path_resolver.cpp  astar_path_resolver.h  object_factory.cpp  object_factory.h  sierra.cpp  sierra.h  sierra_engine_context.h  sierra_imgui_layer.cpp  sierra_imgui_layer.h  sierra_input_event.cpp  sierra_input_event.h  sierra_input_handler.cpp  sierra_input_handler.h  sierra_input_processor.cpp  sierra_input_processor.h  sierra_layer.cpp  sierra_layer.h  sierra_level_layer.cpp  sierra_level_layer.h  sierra_main_layer.cpp  sierra_main_layer.h  sierra_placement_layer.cpp  sierra_placement_layer.h  sierra_player_state.cpp  sierra_player_state.h  sierra_ui_layer.cpp  sierra_ui_layer.h  wave_system.cpp  wave_system.h
source/examples/a-star/: CMakeLists.txt
source/examples/a-star/private/: a-star-grid-cell.h  a-star-grid-drawer.h  a-star-grid-iterator.cpp  a-star-grid.h  a-star-path-resolver.h  a-star.cpp
source/examples/cyber-ocean/: CMakeLists.txt
source/examples/cyber-ocean/private/: cyber-ocean.cpp
source/examples/demo/: CMakeLists.txt
source/examples/demo/private/: demo.cpp
source/examples/engine/a-star/: CMakeLists.txt
source/examples/engine/demo_engine/: CMakeLists.txt
source/examples/framework/demo_framework/: CMakeLists.txt
source/examples/framework/demo_framework_imgui/: CMakeLists.txt
source/examples/framework/demo_framework_imgui_reload_images/: CMakeLists.txt
source/examples/framework/demo_imgui/: CMakeLists.txt
source/examples/geometry-shader/: CMakeLists.txt
source/examples/geometry-shader/private/: geometry-shader.cpp
source/examples/mondriaan/: CMakeLists.txt
source/examples/mondriaan/private/: mondriaan.cpp
source/examples/normal-shader/: CMakeLists.txt
source/examples/normal-shader/private/: normal-shader.cpp
source/examples/perlin-noise-flow-field/: CMakeLists.txt
source/examples/perlin-noise-flow-field/private/: particle.cpp  particle.h  perlin-noise-flow-field.cpp
source/examples/raycasting/: CMakeLists.txt
source/examples/raycasting/private/: boundary.cpp  boundary.h  particle.cpp  particle.h  ray.cpp  ray.h  raycasting.cpp
source/examples/shapes/: CMakeLists.txt
source/examples/shapes/private/: shapes.cpp
source/examples/treasure-hunt/: CMakeLists.txt
source/examples/treasure-hunt/private/: file_reader.h  nonogram_grid.h  nonogram_parser.h  nonogram_printer.h  nonogram_puzzle.h  nonogram_solver.h  treasure-hunt.cpp
source/examples/wave-function-collapse/: CMakeLists.txt
source/examples/wave-function-collapse/private/: cell.cpp  cell.h  tile.cpp  tile.h  wave-function-collapse.cpp
source/runtime/ppp_device/: CMakeLists.txt
source/runtime/ppp_device/private/: device_gl.cpp  device_input.cpp  device_input.h
source/runtime/ppp_device/public/: device.h
source/runtime/ppp_engine/: CMakeLists.txt
source/runtime/ppp_engine/private/: camera.cpp  color.cpp  constants.cpp  data.cpp  entrypoint.cpp  environment.cpp  events.cpp  file.cpp  image.cpp  input_output.cpp  io.cpp  json.cpp  lights.cpp  material.cpp  mathematics.cpp  model.cpp  random.cpp  ray.cpp  rendering.cpp  shapes.cpp  structure.cpp  time_date.cpp  transform.cpp  trigonometry.cpp  typography.cpp
source/runtime/ppp_engine/public/: camera.h  color.h  constants.h  conversions.h  data.h  engine.h  entrypoint.h  environment.h  events.h  file.h  image.h  input_output.h  io.h  json.h  lights.h  material.h  mathematics.h  matrix.h  model.h  quat.h  random.h  ray.h  rendering.h  shapes.h  structure.h  time_date.h  transform.h  trigonometry.h  types.h  typography.h  vector.h
source/runtime/ppp_framework/: CMakeLists.txt
source/runtime/ppp_framework/private/: framework.cpp  sketch.cpp
source/runtime/ppp_framework/public/: framework.h  sketch.h
source/runtime/ppp_renderer/: CMakeLists.txt
source/runtime/ppp_renderer/private/: render_gl.cpp
source/runtime/ppp_renderer/public/: render.h
source/runtime/ppp_utils/: CMakeLists.txt
source/runtime/ppp_utils/public/: log.h
source/test/integration-tests/: CMakeLists.txt
source/test/integration-tests/geometry-2d/: CMakeLists.txt
source/test/integration-tests/geometry-3d/: CMakeLists.txt
source/test/integration-tests/geometry-gpu/: CMakeLists.txt
source/test/integration-tests/rendering-batched/: CMakeLists.txt
source/test/integration-tests/rendering-instanced/: CMakeLists.txt
source/test/integration-tests/shader-normal/: CMakeLists.txt
source/test/integration-tests/shader-specular/: CMakeLists.txt
source/test/integration-tests/test-geometry-2d/: CMakeLists.txt
source/test/integration-tests/test-geometry-3d/: CMakeLists.txt
source/test/integration-tests/test-geometry-gpu/: CMakeLists.txt
source/test/integration-tests/test-model-create-obj/: CMakeLists.txt
source/test/integration-tests/test-model-load-obj/: CMakeLists.txt
source/test/integration-tests/test-rendering-batched/: CMakeLists.txt
source/test/integration-tests/test-rendering-batched-textured/: CMakeLists.txt
source/test/integration-tests/test-rendering-instanced/: CMakeLists.txt
source/test/integration-tests/test-rendering-instanced-textured/: CMakeLists.txt
source/test/integration-tests/test-shader-normal-batched/: CMakeLists.txt
source/test/integration-tests/test-shader-normal-instanced/: CMakeLists.txt
source/test/integration-tests/test-shader-specular-batched/: CMakeLists.txt
source/test/integration-tests/test-shader-specular-instanced/: CMakeLists.txt
source/test/unit-tests/: CMakeLists.txt  unit-tests-color.cpp  unit-tests-constants.cpp  unit-tests-conversions.cpp  unit-tests-data.cpp  unit-tests-mathematics.cpp  unit-tests-matrix2x2.cpp  unit-tests-matrix3x3.cpp  unit-tests-matrix4x4.cpp  unit-tests-random.cpp  unit-tests-time_date.cpp  unit-tests-transform.cpp  unit-tests-trigonometry.cpp  unit-tests-vector2.cpp  unit-tests-vector3.cpp  unit-tests-vector4.cpp
(+552 files in other folders)
